# server/src/scaffold/mixins/sca-validator-update.mixin.ts
@@ -1,4 +1,3 @@
-import {ProjectUpdateDto} from '@/entities/project.entity';
 import {ScaBody} from '@/scaffold/decorators/sca-body';
 import {ScaParamId} from '@/scaffold/decorators/sca-param-id';
 import {
@@ -6,12 +5,11 @@ import {
     ScaUpdateValidateResponse
 } from '@/scaffold/decorators/sca-update-validate';
 import {ScaConstructor, ScaEmptyBase} from '@/scaffold/mixins/sca.mixin';
-import {ScaEntity} from '@/scaffold/models/sca.entity';
-import {ScaInvalidator} from '@/scaffold/validators/sca-invalidator';
-import {ScaValidatorService} from '@/scaffold/validators/sca-validator.service';
+import {ScaInvalidatorBuilder} from '@/scaffold/validators/sca-invalidator-builder';
+import {ScaValidatorHandler} from '@/scaffold/validators/sca-validator-handler';
 import {Type} from '@nestjs/common';
 
-interface ScaUpdateValidatorMixinOptions<TUpdateDto extends object> {
+interface ScaValidatorUpdateMixinOptions<TUpdateDto extends object> {
     paramId?: string;
 
     updateDto: Type<TUpdateDto>;
@@ -19,8 +17,7 @@ interface ScaUpdateValidatorMixinOptions<TUpdateDto extends object> {
     decorators?: () => Array<MethodDecorator>;
 }
 
-export function scaUpdateValidatorMixin<
-    TDo extends ScaEntity,
+export function scaValidatorUpdateMixin<
     TUpdateDto extends object,
     TBase extends ScaConstructor
 >(
@@ -28,20 +25,20 @@ export function scaUpdateValidatorMixin<
         paramId = 'id',
         updateDto,
         decorators
-    }: ScaUpdateValidatorMixinOptions<TUpdateDto>,
+    }: ScaValidatorUpdateMixinOptions<TUpdateDto>,
     Base: TBase = ScaEmptyBase as TBase
 ) {
     abstract class ScaPaginateClass extends Base {
-        abstract validator(): ScaValidatorService<TDo, never, TUpdateDto>;
+        abstract validator(): ScaValidatorHandler<never, TUpdateDto>;
 
         @ScaUpdateValidate({bodyDto: updateDto, paramId, decorators})
         async scaUpdateValidate(
             @ScaParamId(paramId) id: number,
             @ScaBody(updateDto) data: TUpdateDto
         ): ScaUpdateValidateResponse {
-            const invalidator = new ScaInvalidator<ProjectUpdateDto>();
-            await this.validator().onUpdateValidate(invalidator, id, data);
-            return invalidator.response();
+            const builder = new ScaInvalidatorBuilder<TUpdateDto>();
+            await this.validator().onUpdateValidate(builder, id, data);
+            return builder.result().response();
         }
     }
 
