# server/src/scaffold/validators/sca-invalidator.ts
@@ -1,87 +1,13 @@
-import {
-    ScaFieldValidationCode,
-    ScaFieldValidationDto,
-    ScaValidationResponseDto
-} from '@/scaffold/dtos/sca-validation.dto';
-import {BadRequestException} from '@nestjs/common';
+export interface ScaInvalidator<TDto extends object> {
+    notFound(name: keyof TDto, message?: string): void;
 
-export class ScaInvalidator<TDto extends object> {
-    private readonly invalidations: Array<ScaFieldValidationDto> = [];
+    notUnique(name: keyof TDto, message?: string): void;
 
-    public notFound(name: keyof TDto, message?: string): void {
-        this.add(
-            name,
-            ScaFieldValidationCode.NOT_FOUND,
-            message ?? 'Resource not found'
-        );
-    }
+    format(name: keyof TDto, message?: string): void;
 
-    public notUnique(name: keyof TDto, message?: string): void {
-        this.add(
-            name,
-            ScaFieldValidationCode.NOT_UNIQUE,
-            message ?? 'Resource already exists'
-        );
-    }
+    badValue(name: keyof TDto, message?: string): void;
 
-    public format(name: keyof TDto, message?: string): void {
-        this.add(
-            name,
-            ScaFieldValidationCode.FORMAT,
-            message ?? 'Invalid format'
-        );
-    }
+    invalid(name: keyof TDto, message?: string): void;
 
-    public badValue(name: keyof TDto, message?: string): void {
-        this.add(
-            name,
-            ScaFieldValidationCode.BAD_VALUE,
-            message ?? 'Invalid value'
-        );
-    }
-
-    public invalid(name: keyof TDto, message?: string): void {
-        this.add(name, ScaFieldValidationCode.INVALID, message ?? 'Invalid');
-    }
-
-    public required(name: keyof TDto, message?: string): void {
-        this.add(name, ScaFieldValidationCode.REQUIRED, message ?? 'Required');
-    }
-
-    /**
-     * Only the first invalidation for each field is kept.
-     */
-    public response(): ScaValidationResponseDto {
-        return {
-            valid: this.invalidations.length === 0,
-            fields: [...new Set(this.invalidations.map(({name}) => name))],
-            invalidations: this.invalidations.reduce(
-                (acc, {name, code, message}) => {
-                    // will overwrite the previous invalidation for the same field
-                    acc[name] = {name, code, message};
-                    return acc;
-                },
-                {} as Record<string, ScaFieldValidationDto>
-            )
-        };
-    }
-
-    public badRequest(): BadRequestException {
-        return new BadRequestException('Invalidator failed', {
-            cause: this.response(),
-            description: 'Invalidator failed'
-        });
-    }
-
-    public isValid(): boolean {
-        return this.invalidations.length === 0;
-    }
-
-    private add(
-        name: keyof TDto,
-        code: ScaFieldValidationCode,
-        message: string
-    ): void {
-        this.invalidations.push({name: name as string, code, message});
-    }
+    required(name: keyof TDto, message?: string): void;
 }
